2000-05-02  Lauris Kaplinski  <lauris@ariman.ee>

	* src/sp-gradient.*: Implemented skeleton for gradient fills
	* src/sp-object-repr.c: Gradient parsing

2000-05-01  Lauris Kaplinski  <lauris@ariman.ee>

	* src/helper/sodipodi-ctrl.c: Fixed bug in ::render, which left
	buffer->is_bg untouched
	* src/sp-defs.*: New objects, implementing <defs> nodes
	* src/sp-group.*: Groups have both item and non-item members
	* src/sp-image.c: Changed "src" attribute to "href"

2000-04-29  Lauris Kaplinski  <lauris@ariman.ee>

	* xml/repr.*: Reprs are now GtkObjects
	* xml/repr-io.c: Preliminary namespacing (xmlns:sodipodi)

2000-04-29  Lauris Kaplinski  <lauris@ariman.ee>

	* src/dialogs/xml-tree.c (sp_xml_tree_change_attribute_long):
	new function to change long attribute (GtkEntry does not like
	long strings). Also attribute changing in xml pushes Undo stack.

2000-04-28  Lauris Kaplinski  <lauris@ariman.ee>

	* glade/Makefile.am: Added xml-tree.glade

	* src/dialogs/xml-tree.c (sp_xml_tree_change_attribute): implemented
	this

2000-04-27  Miguel de Icaza  <miguel@helixcode.com>

	* glade/Makefile.am: New file.

	* src/dialogs/Makefile.am (gladedir): Define gladedir based on
	$datadir

	* Makefile.am: Remove the local install hack stuff.  And process
	the glade directory.
	
	* configure.in: Do not define PACKAGE_GLADEDIR based on the output
	of gnome-config.  Let the Makefile.am compute that value from the
	various $prefix settings.

2000-04-27  Lauris Kaplinski  <lauris@ariman.ee>

	* src/dialogs/xml-tree.c: Attribute deletion mostly work

2000-04-27  Lauris Kaplinski  <lauris@ariman.ee>

	* src/dialogs/xml-tree.*: Started implementing direct xml editing

	* glade/xml-tree.glade: XML editing dialogs

2000-04-26  Lauris Kaplinski  <lauris@ariman.ee>

	* helper/curve.c (sp_curve_split): Fixed evil memcpy size bug

2000-04-24  Lauris Kaplinski  <lauris@ariman.ee>

	* src/selection-chemistry.c: Implemented Cut/Copy/Paste

2000-04-23  Lauris Kaplinski  <lauris@ariman.ee>
